--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,37 @@
 body {
     background-color: #151925;
 }
+
+.project-container::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 350px;
+    border: none;
+    border-radius: 12px;
+    background-color: rgba(0, 0, 0, 0.8);
+    visibility: hidden;
+}
+
+.project-info {
+    position: absolute;
+    top: 50px;
+}
+
+.project-info>p {
+    font-size: 0.875rem;
+    line-height: 24px;
+    padding: 20px;
+}
+
+.project-info {
+    visibility: hidden;
+}
+
+.project-container:hover:before,
+.project-container:hover>.project-info {
+    visibility: visible;
+}
